edited the daily graph to make look better

--- a/templates/dailygraph.html
+++ b/templates/dailygraph.html
@@ -47,9 +47,8 @@
     options: {
       title: {
         display: true,
-        text: 'Track your emotions throughout the day! Positivity is on the vertical axes and time is on the horizontal axes'
+        text: 'Track your emotions throughout the day! Emotional Positivity is on the positive vertical axis, Emotional Negativity is on the negative vertical axis, and time is plotted on the horizontal axes'
       }
-
     }
   });
   </script>
