edited css for emotionpage.css/html

--- a/templates/emotionpage.html
+++ b/templates/emotionpage.html
@@ -25,12 +25,13 @@
 
         </div>
       </nav>
-    <div class = "questioncontainer" style="background-color: {{color}}">
+    <div class = "questioncontainer" style="background-color:{{color}}">
     <h1 id = "greetingmessage">You chose: {{emotion}}. Can you explain why?</h1>
     <form method="post" action="/dailylog" >
-      <input type="text" name="answer"></input>
+      <input type="text" name="answer" ></input>
       <input type="hidden" name="my_emotion" value="{{emotion}}"></input>
-      <input type="submit" value="Submit" id = "submitButton" class ="hoverButton">
+      <br>
+      <input type="submit" value="Submit" id = "submitButton">
   </div>
     <div class="slidecontainer">
       <input type="range" min="1" max="10" value="1" class="slider" id="myRange" name = "intensityAnswer">
